# DomainAdaptive_PoissonDiffusion

./: .dataset_aliases  .gitignore  .gitmodules  .pre-commit-config.yaml  Anna_Read_this.md  Baselines_ToDo.md  CHANGES_SUMMARY.txt  CODES.py  CRITICAL_CORRECTIONS.md  DAPGD_Implementation.md  DEV_ENV_STATUS.md  DOCUMENTATION_INDEX.md  HPC_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INFERENCE_GUIDE.md  OPTIMIZED_USAGE.md  PEER_REVIEW_CHANGES.md  PG_guidance.md  PNG_DATA_FORMAT_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  README_TRAINING_CORRECTIONS.md  TRAINING_IMPROVEMENTS.md  TRAINING_SETUP_GUIDE.md  VERIFY_INTEGRATION.sh  analysis_summary.md  balanced_domain_config.py  benchmark_performance.py  check_cluster_status.sh  compare_guidance_settings.sh  corrected_phase7_assessment.md  create_comparison_visualization_fixed.py  create_comprehensive_comparison.py  create_summary_visualization.py  dataset  debug_training.py  debug_unified_model.py  enhanced_domain_sampler.py  evaluate_trained_models.py  (+86 more)
analysis/: __init__.py  analyze_exposure_poisson_fractions.py  compute_stratified_from_guidance_comparison.py  stratified_evaluation.py
analysis_results/: astronomy_best_tiles.csv  astronomy_cross_domain_best_tiles.csv  microscopy_best_tiles.csv  microscopy_cross_domain_best_tiles.csv  photography_fuji_best_tiles.csv  photography_sony_best_tiles.csv
checkpoint_evaluation/: evaluation_results.json
config/: README_CONFIG_TRAINING.md  astro.yaml  config.py  default.yaml  diffusion.yaml  fuji.yaml  logging_config.py  micro.yaml  photo.yaml  sample_config.py  sensor_config.py  sidd.yaml  sony.yaml  sony_fuji.yaml
configs/: baseline_evaluation.yaml  comprehensive_evaluation.yaml  default.yaml  evaluation.yaml  guidance_presets.yaml  l2_baseline_astronomy.yaml  l2_baseline_microscopy.yaml  l2_baseline_photography.yaml  memory_optimized.yaml  synthetic_validation.yaml
core/: __init__.py  baselines.py  benchmarking.py  calibration.py  dataset.py  demosaic.py  edm_wrapper.py  error_handlers.py  exceptions.py  extract_metadata.py  gradients.py  guidance.py  guidance_config.py  guidance_factory.py  interfaces.py  l2_guidance.py  logging_config.py  metrics.py  normalization.py  optimized_guidance.py  patch_processing.py  performance.py  physics_aware_sampler.py  poisson_guidance.py  residual_analysis.py  sampler.py  sensor_detector.py  transforms.py  utils.py
dapgd/: .gitignore  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  requirements.txt  setup.py
data/: __init__.py  astronomy_preprocessor.py  augmentations.py  dataset.py  domain_datasets.py  loaders.py  npy_dataset.py  patch_dataset.py  png_dataset.py  preprocessed_datasets.py
dataset/: processed
docs/: DATASET_VERIFICATION.md  appendix.md  baseline_implementation_plan.md  evaluation_enhancement_todos.md  implementation_plan.md  l2_baseline_integration_guide.md  (+9 more)
(+426 files in other folders)
